Fix click text issue with taskbar entries and added spacing between clock and icons

--- a/frontend/src/app/components/taskbar/entry/entry.component.scss
+++ b/frontend/src/app/components/taskbar/entry/entry.component.scss
@@ -7,6 +7,7 @@
   width: 160px;
 
   .icon /deep/ svg {
+    pointer-events: none;
     float: left;
     height: 14px;
     width: 14px;
@@ -14,6 +15,7 @@
   }
 
   .title {
+    pointer-events: none;
     float: left;
     font-size: 12px;
     color: $taskbar-entry-title-text-color;
