--- a/frontend/src/app/components/taskbar/taskbar.component.scss
+++ b/frontend/src/app/components/taskbar/taskbar.component.scss
@@ -13,6 +13,10 @@
     display: inline-block;
   }
 
+  #taskbar-entries {
+    padding: 0 3px;
+  }
+
   #taskbar-tray {
     float: right;
   }
